# cards

./: .gitignore  Cargo.toml  LICENSE  README.md
cards_client/: Cargo.toml
cards_client/src/: main.rs
cards_protocol/: Cargo.toml
cards_protocol/src/: lib.rs
cards_server/: Cargo.toml
cards_server/schema/: game-config.json
cards_server/src/: game.rs  main.rs  server.rs  tracing_subscriber.rs  utils.lua
cards_subscriber/: Cargo.toml
cards_subscriber/src/: lib.rs
games/test/: game.lua
games/uno/: game.lua
