[package]
name = "cards_protocol"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
smol = "1.2.4"
async-trait = "0.1.41"