[package]
name = "cards_server"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.17.0"
rand = "0.7.3"
smol = "1.2.4"
cards_protocol = {path="../cards_protocol"}